# HSA_homework_3

./: README.md  main.py  pyproject.toml
